# taliaivo_sw

./: .gitignore  Cargo.toml  README.txt  memory.x
.cargo/: config.toml
sumobrain_common/: Cargo.toml
sumobrain_common/src/: lib.rs  map.rs
sumobrain_embedded/: Cargo.toml  build_debug.sh  build_release.sh  dfu_firmware.sh  dfu_release.sh  flash_debug.sh  flash_release.sh
sumobrain_embedded/src/: command_accumulator.rs  main.rs
sumobrain_simulator/: Cargo.toml  run.sh
sumobrain_simulator/src/: main.rs
taliaivo_common/: Cargo.toml
taliaivo_common/src/: lib.rs  map.rs
taliaivo_embedded/: Cargo.toml  build_debug.sh  build_release.sh  dfu_release.sh  flash_debug.sh  flash_dfu_release.sh  flash_openocd_debug.sh  flash_openocd_release.sh  flash_release.sh  flash_uart_release.sh  uart_release.sh
taliaivo_embedded/src/: command_accumulator.rs  main.rs
taliaivo_simulator/: Cargo.toml  bacon.sh
taliaivo_simulator/src/: cli.rs  main.rs
