[package]
name = "sumobrain_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
arrayvec = "0.7.4"
libc-print = "0.1.22"
nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ] }
