[package]
name = "sumobrain_embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sumobrain_common = { path = "../sumobrain_common" }
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
arrayvec = { version = "0.7.4", default-features = false, features = [] }
nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ] }
usb-device = "0.3.1"
usbd-serial = "0.2.0"
stm32f4xx-hal = { version = "0.17.1", features = ["stm32f407", "rt", "usb_fs"] }
