[package]
name = "sumobrain_embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sumobrain_common = { path = "../sumobrain_common" }
arrayvec = { version = "0.7.4", default-features = false, features = [] }
nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ] }

# embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = [ "defmt", "stm32f407ve", "unstable-pac", "time-driver-any", "exti", "embedded-sdmmc", "chrono"]  }
# embassy-sync = { version = "0.5.0", path = "../embassy/embassy-sync", features = ["defmt"] }
# embassy-executor = { version = "0.4.0", path = "../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
# embassy-time = { version = "0.2", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
# embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt" ] }
# embassy-net = { version = "0.2.0", path = "../embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", ] }

embassy-stm32 = { version = "0.1.0", path = "../lib/embassy/embassy-stm32", features = [ "stm32f407ve", "unstable-pac", "time-driver-any", "exti", "embedded-sdmmc", "chrono"]  }
embassy-sync = { version = "0.5.0", path = "../lib/embassy/embassy-sync", features = [] }
embassy-executor = { version = "0.4.0", path = "../lib/embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.2", path = "../lib/embassy/embassy-time", features = ["defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "../lib/embassy/embassy-usb", features = [] }
embassy-net = { version = "0.2.0", path = "../lib/embassy/embassy-net", features = ["tcp", "dhcpv4", "medium-ethernet", ] }

#defmt = "0.3"
#defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
#panic-probe = { version = "0.3", features = ["print-defmt"] }
panic-probe = { version = "0.3", features = [] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
static_cell = { version = "2", features = ["nightly"]}
chrono = { version = "^0.4", default-features = false}

# Can't be used with embassy-stm32
# stm32f4xx-hal = { version = "0.17.1", features = ["stm32f407", "rt", "usb_fs"] }

[profile.release]
debug = 2
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
