[package]
name = "sumobrain_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sumobrain_common = { path = "../sumobrain_common" }
rapier2d = "0.17.2"
piston_window = "0.131.0"
piston = "0.55.0"
arrayvec = "0.7.4"

