[package]
name = "taliaivo_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false, features = [] }
nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ] }
ringbuffer = { version = "0.15.0", default-features = false, features = [] }
micromath = "2.1.0"
log = { version = "0.4" }
