[package]
name = "taliaivo_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taliaivo_common = { path = "../taliaivo_common" }
rapier2d = "0.17.2"
piston_window = "0.131.0"
piston = "0.55.0"
arrayvec = "0.7.4"
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }

